# quadrotor_simulator

quadrotor_simulator/: CMakeLists.txt  package.xml
quadrotor_simulator/configs/: okto_like_model.xml  pelican_like_model.xml
quadrotor_simulator/src/Matlab/: create_tilt_model.m  create_yaw_model.m  create_z_model.m  pelicanDroneTypeModelGenerator.m  test_models.m
quadrotor_simulator/src/include/ARDroneType/: droneElements.h  quadrotor_simulator.h
quadrotor_simulator/src/include/AscTecPelicanType/: pelican_like_elements.h  pelican_like_model.h  pelican_like_simulator.h
quadrotor_simulator/src/source/ARDroneType/: droneElements.cpp  quadrotor_model.cpp  quadrotor_simulator.cpp
quadrotor_simulator/src/source/AscTecPelicanType/: pelican_like_elements.cpp  pelican_like_model.cpp  pelican_like_simulator.cpp
quadrotor_simulator_process/: CMakeLists.txt  README.md  package.xml
quadrotor_simulator_process/launch/: quadrotor_simulator.launch
quadrotor_simulator_process/src/include/: quadrotor_simulator_process.h
quadrotor_simulator_process/src/source/: quadrotor_simulator_process.cpp  quadrotor_simulator_process_main.cpp
quadrotor_simulator_rviz/droneArchitectureRvizInterfaceROSModule/: CMakeLists.txt  package.xml
quadrotor_simulator_rviz/droneArchitectureRvizInterfaceROSModule/launch/: rviz_config.rviz
quadrotor_simulator_rviz/droneArchitectureRvizInterfaceROSModule/meshes/: aruco.dae  aruco_landmark.dae  iris_prop_ccw.dae  iris_prop_cw.dae  quadrotor_4.dae  quadrotor_4.stl  stereo_pyramid.dae  stereo_pyramid_projection.dae
quadrotor_simulator_rviz/droneArchitectureRvizInterfaceROSModule/src/include/: RvizInteractiveMarkerDisplay.h  RvizInterfaceROSModule.h  swarmAgentInterface.h
quadrotor_simulator_rviz/droneArchitectureRvizInterfaceROSModule/src/source/: RvizInteractiveMarkerDisplay.cpp  RvizInterfaceROSModule.cpp  RvizInterfaceROSModuleNode.cpp  swarmAgentInterface.cpp
quadrotor_simulator_rviz/droneSimulatorRvizROSModule/: CMakeLists.txt  mainpage.dox
quadrotor_simulator_rviz/droneSimulatorRvizROSModule/launch/: SimulatorRvizROSModule.launch  Simulator_rviz.rviz  Simulator_rviz_okto.rviz
quadrotor_simulator_rviz/droneSimulatorRvizROSModule/src/include/: SimulatorRvizROSModule.h
quadrotor_simulator_rviz/droneSimulatorRvizROSModule/src/source/: SimulatorRvizROSModule.cpp  SimulatorRvizROSModuleNode.cpp
