<package>
	<name>quadrotor_simulator</name>
	<version>1.0.0</version>
	<description>
    		This package is quadrotor_simulator.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo</maintainer>
  	<license>BSD-3</license>

  	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>lib_cvgutils</build_depend>
	<build_depend>lib_cvgekf</build_depend>

	<run_depend>lib_cvgutils</run_depend>
	<run_depend>lib_cvgekf</run_depend>


</package>


